--- a/project.config.json
+++ b/project.config.json
@@ -21,8 +21,15 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": -1,
-			"list": []
+			"current": 0,
+			"list": [
+				{
+					"id": -1,
+					"name": "留言板",
+					"pathName": "pages/msgBox/msgBox",
+					"query": ""
+				}
+			]
 		}
 	}
 }
