change url to unclexiao

--- a/app.json
+++ b/app.json
@@ -1,36 +1,41 @@
 {
-	"pages":[
-        "pages/home/home","pages/msgBox/msgBox",
-        "pages/about/about",
-        "pages/home-inside/list/list",
-        "pages/home-inside/article/article",
-        "pages/home-inside/markdown/markdown",
-        "pages/home-inside/panel/panel"
-    ],
-	"window":{
-        "navigationBarTextStyle":"white",
-        "navigationBarBackgroundColor":"#35C3AA"
-	},
-	"tabBar":{
-		"color":"#BFBFBF",
-		"selectedColor":"#35C3AA",
-		"backgroundColor":"#F7F7F7",
-		"list":[{
-			"pagePath":"pages/home/home",
-			"text":"首页",
-            "iconPath":"img/tab/home.png",
-            "selectedIconPath":"img/tab/home_selected.png"
-		},{
-			"pagePath":"pages/msgBox/msgBox",
-			"text":"留言板",
-            "iconPath": "img/tab/msg.png",
-            "selectedIconPath": "img/tab/msg_selected.png"
-		},{
-			"pagePath":"pages/about/about",
-			"text":"关于",
-            "iconPath": "img/tab/about.png",
-            "selectedIconPath": "img/tab/about_selected.png"
-		}]
-	},
-    "debug":true
+  "pages": [
+    "pages/home/home",
+    "pages/msgBox/msgBox",
+    "pages/about/about",
+    "pages/home-inside/list/list",
+    "pages/home-inside/article/article",
+    "pages/home-inside/markdown/markdown",
+    "pages/home-inside/panel/panel"
+  ],
+  "window": {
+    "navigationBarTextStyle": "white",
+    "navigationBarBackgroundColor": "#35C3AA"
+  },
+  "tabBar": {
+    "color": "#BFBFBF",
+    "selectedColor": "#35C3AA",
+    "backgroundColor": "#F7F7F7",
+    "list": [
+      {
+        "pagePath": "pages/home/home",
+        "text": "首页",
+        "iconPath": "img/tab/home.png",
+        "selectedIconPath": "img/tab/home_selected.png"
+      },
+      {
+        "pagePath": "pages/msgBox/msgBox",
+        "text": "留言板",
+        "iconPath": "img/tab/msg.png",
+        "selectedIconPath": "img/tab/msg_selected.png"
+      },
+      {
+        "pagePath": "pages/about/about",
+        "text": "关于",
+        "iconPath": "img/tab/about.png",
+        "selectedIconPath": "img/tab/about_selected.png"
+      }
+    ]
+  },
+  "debug": true
 }
