留言板改版和请求md资源

--- a/project.config.json
+++ b/project.config.json
@@ -28,6 +28,12 @@
 					"name": "留言板",
 					"pathName": "pages/msgBox/msgBox",
 					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "列表页",
+					"pathName": "pages/list/list",
+					"query": ""
 				}
 			]
 		}
